Fix #128 message textarea jumping off-screen on mobile

--- a/public/modules/messages/less/thread.less
+++ b/public/modules/messages/less/thread.less
@@ -173,6 +173,7 @@
         margin-bottom: 8px;
         min-height: 25px;
         border-radius: 0;
+        max-height: 60px;
       }
     }
     @media (max-width: @screen-xs-max) {
